--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,18 @@
-<header class="site-header px2 px-responsive">
-  <div class="mt2 wrap">
-    <div class="measure">
-      <a href="{{ site.url }}" class="site-title" style="font-size:30px;vertical-align:text-bottom;">{{ site.title }}</a>
-      <nav class="site-nav">
-        {% include navigation.html %}
-      </nav>
 
-      <div class="clearfix"></div>
-      {% if site.show_social_icons %}
-        {% include social_links.html %}
-      {% endif %}
+<header class="site-header px2 px-responsive" style="position: sticky; top: 0; width: 100%; background: white; z-index:1030; padding: 10px 0px 0px 0px; height: 70px; ">
+  
+  <div class="mt2 wrap" >
+    <div class="measure">
+      <a href="{{ site.url }}" class="site-title" style="font-size:1.5rem;vertical-align:text-bottom;">{{ site.title }}</a>
+      <nav class="site-nav" style="line-height: 1.1;">
+        {% include navigation.html %}      
+      </nav>      
+      <div>
+      <hr id="navbar-border" style="position: absolute; top: 45px; width:100%; max-width: 45em; clear: both;">
+      </div>
     </div>
-  </div>
+    </div>
+    
+      
 </header>
+<br>
