--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,14 +18,10 @@ function scrollToTalks() {
 // }
 </script>
 
-<a href="#research">Publications</a>
-<!-- <a href="#" onclick="scrollToPublications();return false;">Publications</a> -->
-<!-- <a href="#" onclick="scrollToTalks();return false;">Talks</a> -->
-<!-- <a href="#" onclick="scrollToProjects();return false;">Projects</a> -->
-<a href="#talks">Talks</a>
-<!-- <a href="#projects">Projects</a> -->
-<!-- <a href="{{ site.baseurl }}/">Achievements</a> -->
-<!-- <a href="{{ site.baseurl }}/">Achievements</a> -->
-<a href="{{ site.baseurl }}/cv/CV.pdf">CV</a>
-<!-- <a href="{{ site.basurl }}/blog/">Blog</a> -->
-
+<a href="{{ site.baseurl }}/cv/CV.pdf" style="font-size: 1rem">CV</a>
+<a href="#research" style="font-size: 1rem">Publications</a>
+<a href="#talks" style="font-size: 1rem">Talks</a>
+<a href="https://scholar.google.com/citations?user=cbVMMCwAAAAJ" style="font-size: 1rem">Scholar</a>
+<a href="https://github.com/{{ site.github_username }}" style="font-size: 1rem">GitHub</a>
+<a href="https://twitter.com/{{ site.twitter_username }}" style="font-size: 1rem">Twitter</a>
+<!-- <a href="https://www.linkedin.com/in/viraj-prabhu-0a2a9435/" style="font-size: 1rem">LinkedIn</a> -->
