--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      © Binhui Xie 2023. CSS based on John Otander's <a href="https://github.com/johno/pixyll">Pixyll</a> theme</a>.
+      © Wenxuan Ma 2023. CSS based on John Otander's <a href="https://github.com/johno/pixyll">Pixyll</a> theme</a>.
     </small>
 
   </div>
