--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -22,6 +22,6 @@ function scrollToTalks() {
 <a href="#research" style="font-size: 1rem">Publications</a>
 <a href="#talks" style="font-size: 1rem">Talks</a>
 <a href="https://scholar.google.com/citations?user=cbVMMCwAAAAJ" style="font-size: 1rem">Scholar</a>
-<a href="https://github.com/{{ site.github_username }}" style="font-size: 1rem">GitHub</a>
-<a href="https://twitter.com/{{ site.twitter_username }}" style="font-size: 1rem">Twitter</a>
+<a href="https://github.com/singalist" style="font-size: 1rem">GitHub</a>
+<a href="https://twitter.com//WayneMa82698803" style="font-size: 1rem">Twitter</a>
 <!-- <a href="https://www.linkedin.com/in/viraj-prabhu-0a2a9435/" style="font-size: 1rem">LinkedIn</a> -->
