--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,7 +18,7 @@ function scrollToTalks() {
 // }
 </script>
 
-<a href="{{ site.baseurl }}/cv/CV.pdf" style="font-size: 1rem">CV</a>
+<a href="{{ site.baseurl }}/cv/CV2.pdf" style="font-size: 1rem">CV</a>
 <a href="#research" style="font-size: 1rem">Publications</a>
 <a href="#talks" style="font-size: 1rem">Talks</a>
 <a href="https://scholar.google.com/citations?user=u7aJOt8AAAAJ" style="font-size: 1rem">Scholar</a>
